vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__package__tests__package_body_end_package_without_body_keyword.snap
---
source: vhdl_syntax/src/parser/productions/package.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
package body math_pkg is
end package;

== tree ==
PackageBody
  PackageBodyPreamble
    Keyword(Package)
    Keyword(Body)
    Identifier 'math_pkg'
    Keyword(Is)
  PackageBodyEpilogue
    Keyword(End)
    EndPackageBody
      Keyword(Package)
    SemiColon

== diagnostics ==
2:12 expected 'body'
