vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__package__tests__package_body_missing_body_keyword.snap
---
source: vhdl_syntax/src/parser/productions/package.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
package math_pkg is
  constant pi : real := 3.14;
end package body;

== tree ==
PackageBody
  PackageBodyPreamble
    Keyword(Package)
    Identifier 'math_pkg'
    Keyword(Is)
  PackageBodyDeclarativePart
    ConstantDeclaration
      Keyword(Constant)
      IdentifierList
        Identifier 'pi'
      Colon
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'real'
      InitialValue
        ColonEq
        LiteralExpression
          AbstractLiteral '3.14'
      SemiColon
  PackageBodyEpilogue
    Keyword(End)
    EndPackageBody
      Keyword(Package)
      Keyword(Body)
    SemiColon

== diagnostics ==
1:8 expected 'body'
