vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__package__tests__package_declaration.snap
---
source: vhdl_syntax/src/parser/productions/package.rs
expression: "to_test_text(Parser::package, \"\\\npackage pkg_name is\nend package;\")"
---
PackageDeclaration
  PackagePreamble
    Keyword(Package)
    Identifier 'pkg_name'
    Keyword(Is)
  PackageEpilogue
    Keyword(End)
    Keyword(Package)
    SemiColon
