vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__package__tests__package_declaration_generics_clause.snap
---
source: vhdl_syntax/src/parser/productions/package.rs
expression: "to_test_text(Parser::package,\n\"\\\npackage pkg_name is\n  generic (\n    type foo;\n    type bar\n  );\nend package;\")"
---
PackageDeclaration
  PackagePreamble
    Keyword(Package)
    Identifier 'pkg_name'
    Keyword(Is)
  PackageHeader
    GenericClause
      Keyword(Generic)
      LeftPar
      InterfaceList
        InterfaceIncompleteTypeDeclaration
          Keyword(Type)
          Identifier 'foo'
        SemiColon
        InterfaceIncompleteTypeDeclaration
          Keyword(Type)
          Identifier 'bar'
      RightPar
      SemiColon
  PackageEpilogue
    Keyword(End)
    Keyword(Package)
    SemiColon
