vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__package__tests__package_missing_end.snap
---
source: vhdl_syntax/src/parser/productions/package.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
package math_pkg is
  constant pi : real := 3.14;

== tree ==
PackageDeclaration
  PackagePreamble
    Keyword(Package)
    Identifier 'math_pkg'
    Keyword(Is)
  PackageDeclarativePart
    ConstantDeclaration
      Keyword(Constant)
      IdentifierList
        Identifier 'pi'
      Colon
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'real'
      InitialValue
        ColonEq
        LiteralExpression
          AbstractLiteral '3.14'
      SemiColon

== diagnostics ==
2:30 expected PackageEpilogue
